--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./static/css/animate.css">
   <title>ENI_FullVersionseq_5Dec17_CPDD_ver</title>
   <script src="static/apiUrl/url.js"></script>
 </head>
